tests/baselines/reference/propertyAccessOnTypeParameterWithoutConstraints.errors.txt
tests/cases/conformance/types/typeParameters/typeParameterLists/propertyAccessOnTypeParameterWithoutConstraints.ts(5,22): error TS2339: Property 'toString' does not exist on type 'T'.
tests/cases/conformance/types/typeParameters/typeParameterLists/propertyAccessOnTypeParameterWithoutConstraints.ts(21,22): error TS2339: Property 'toString' does not exist on type 'unknown'.
tests/cases/conformance/types/typeParameters/typeParameterLists/propertyAccessOnTypeParameterWithoutConstraints.ts(27,22): error TS2339: Property 'toString' does not exist on type 'T'.


==== tests/cases/conformance/types/typeParameters/typeParameterLists/propertyAccessOnTypeParameterWithoutConstraints.ts (3 errors) ====
    class C<T> {
        f() {
            var x: T;
            var a = x['toString'](); // should be string
            return a + x.toString();
                         ~~~~~~~~
!!! error TS2339: Property 'toString' does not exist on type 'T'.
        }
    }
    
    var r = (new C<number>()).f();
    
    interface I<T> {
        foo: T;
    }
    var i: I<number>;
    var r2 = i.foo.toString();
    var r2b = i.foo['toString']();
    
    var a: {
        <T>(): T;
    }
    var r3: string = a().toString();
                         ~~~~~~~~
!!! error TS2339: Property 'toString' does not exist on type 'unknown'.
    var r3b: string = a()['toString']();
    
    var b = {
        foo: <T>(x: T) => {
            var a = x['toString'](); // should be string
            return a + x.toString();
                         ~~~~~~~~
!!! error TS2339: Property 'toString' does not exist on type 'T'.
        }
    }
    
    var r4 = b.foo(1);